--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body class="scroll-smooth">
     <div>
-        <div class="bg-no-repeat bg-cover h-screen w-screen" style="background-image: url('../images/newfactory.jpg');">
+        <div class="bg-no-repeat bg-cover h-screen w-screen" style="background-image: url('./images/newfactory.jpg');">
             <nav class="flex items-start bg-white w-screen px-8 shadow-inner border border-sky-500">
-                <img src="../images/icons8-google-48.png" class="w-24 cursor-pointer"> 
+                <img src="./images/icons8-google-48.png" class="w-24 cursor-pointer"> 
                 <ul class="flex-1 text-center pt-8">
                     <li class="list-none inline-block px-5"><a href="#1" class="hover:underline to-black text-2xl font-semibold px-2">Home</a></li>
                     <li class="list-none inline-block px-5"><a href="#2" class="hover:underline to-black text-2xl font-semibold px-2">Aboutus</a></li>
                     <li class="list-none inline-block px-5"><a href="#3" class="hover:underline to-black text-2xl font-semibold px-2">Services</a></li>
                     <li class="list-none inline-block px-5"><a href="#4" class="hover:underline to-black text-2xl font-semibold px-2">Contact</a></li>
                 </ul>
-                <a href="#" class="pt-6 pr-6"><img src="../images/icons8-linkedin-50.png"></a> 
+                <a href="#" class="pt-6 pr-6"><img src="./images/icons8-linkedin-50.png"></a> 
             </nav>
     
             <div class="text-white mt-52 ml-32 max-w-xl md:flex-row">
@@ -39,7 +39,7 @@
 
                 <div class="hover:border-2 w-65 bg-slate-900 rounded-2xl cursor-pointer hover:bg-slate-800">
                     <div class="ml-24 mt-8 px-2 py-2">
-                        <img src="../images/pump.png" class="size-16">
+                        <img src="./images/pump.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-white text-2xl text-center px-2 mt-6">PUMPS</h2>
                     <p class="text-center text-white px-2 mt-4">Comprehensive pump solutions tailored to your industry</p>
@@ -51,7 +51,7 @@
 
                 <div class="hover:border-2 w-65 h-80 bg-slate-900 rounded-2xl cursor-pointer hover:bg-slate-800">
                     <div class="ml-24 mt-8 px-2 py-2">
-                        <img src="../images/valve.png" class="size-16">
+                        <img src="./images/valve.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-white text-2xl text-center px-2 mt-6">VALVES</h2>
                     <p class="text-center text-white px-2 mt-4">Durable, field-proven, application-specification valve</p>
@@ -63,7 +63,7 @@
 
                 <div class="hover:border-2 w-65 bg-slate-900 rounded-2xl cursor-pointer hover:bg-slate-800">
                     <div class="ml-28 mt-10">
-                        <img src="../images/motor.png" class="size-16">
+                        <img src="./images/motor.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-white text-2xl text-center px-2 mt-6">ACTUATORS</h2>
                     <p class="text-center text-white px-2 mt-4">Technology driven nuclear safety and non-safety actuators.</p>
@@ -74,7 +74,7 @@
 
                 <div class="hover:border-2 w-65 bg-slate-900 rounded-2xl cursor-pointer hover:bg-slate-800">
                     <div class="ml-28 mt-10">
-                        <img src="../images/engine.png" class="size-16">
+                        <img src="./images/engine.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-white text-2xl text-center px-2 mt-6">STEAM TURBINES</h2>
                     <p class="text-center text-white px-2 mt-4">Single & Multi-stage steam turbines up to 150 MW capacity.</p>
@@ -87,7 +87,7 @@
         </div>
 
 
-        <div class="bg-cover bg-no-repeat w-full min-h-screen" id="3" style="background-image: url(../images/imageedit_1_3651661049.png);">
+        <div class="bg-cover bg-no-repeat w-full min-h-screen" id="3" style="background-image: url(./images/imageedit_1_3651661049.png);">
             <div class="max-w-4xl ml-40 pt-60">
                 <h1 class="text-5xl  text-sky-950 font-bold m-auto leading-normal">SHIVAKUMAR ENGINEERING WORKS </h1>
                 <p class=" max-w-2xl text-lg font-semibold mt-6 px-2 py-2">Built on a rich global history spanning hundreds of years, we fuel growth by innovation, an experienced workforce, and our company vision to become the most relied upon flow control solutions company in the world.</p>
@@ -105,28 +105,28 @@
             <div class="grid grid-cols-4 max-w-6xl px-2 py-2 m-auto mt-16 pb-10">
                 <div class="w-65 h-40 cursor-pointer border-r-2 border-lime-600">
                     <div class="ml-28">
-                        <img src="../images/puzzle.png" class="size-16">
+                        <img src="./images/puzzle.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-2xl text-center px-2 mt-6 text-sky-700">MISSION CRITICAL SOLUTIONS</h2>   
                 </div>
 
                 <div class="w-65 h-40 cursor-pointer border-r-2 border-lime-600">
                     <div class="ml-28">
-                        <img src="../images/drawing-compass.png" class="size-16">
+                        <img src="./images/drawing-compass.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-2xl text-center px-2 mt-6 text-sky-700">HIGHLY ENGINEERED EQUIPMENT</h2> 
                 </div>
 
                 <div class="w-65 h-40 cursor-pointer border-r-2 border-lime-600">
                     <div class="ml-28">
-                        <img src="../images/settings.png" class="size-16">
+                        <img src="./images/settings.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-2xl text-center px-2 mt-6 text-sky-700">INTENSIVE AFTERMARKET CARE</h2> 
                 </div>
 
                 <div class="w-65 cursor-pointer">
                     <div class="ml-28">
-                        <img src="../images/global-services.png" class="size-16">
+                        <img src="./images/global-services.png" class="size-16">
                     </div>
                     <h2 class="font-bold text-2xl text-center px-2 mt-6 text-sky-700">COMPREHENSIVE GLOBAL SUPPORT</h2> 
 
@@ -145,31 +145,31 @@
                         </div>
                         <div>
                             <div class="flex items-center">
-                                <img src="../images/phone-call.png" class="size-6">
+                                <img src="./images/phone-call.png" class="size-6">
                                 <p class="px-2">(+91) 8310477598</p>
                             </div>
                             <div class="flex items-center pt-2">
-                                <img src="../images/gmail.png" class="size-6">
+                                <img src="./images/gmail.png" class="size-6">
                                 <p class="px-2">sagarbagalkoti007@gmail.com</p>
                             </div>
                             <div class="flex items-center pt-2">
-                                <img src="../images/location.png" class="size-6">
+                                <img src="./images/location.png" class="size-6">
                                 <p class="px-2">Industrial Estate Gokul-road</p>
                             </div>
                         </div>
 
                         <div class="pt-10 flex">
                             <a href="#" class="px-2">
-                                <img src="../images/icons8-linkedin-50.png" class="size-8">
+                                <img src="./images/icons8-linkedin-50.png" class="size-8">
                             </a>
                             <a href="#" class="px-2">
-                                <img src="../images/twitter.png" class="size-8">
+                                <img src="./images/twitter.png" class="size-8">
                             </a>
                             <a href="#" class="px-2">
-                                <img src="../images/facebook.png" class="size-8">
+                                <img src="./images/facebook.png" class="size-8">
                             </a>
                             <a href="#" class="px-2">
-                                <img src="../images/instagram.png" class="size-8">
+                                <img src="./images/instagram.png" class="size-8">
                             </a>
                         </div>
                         <div class="bg-white rounded-xl shadow-lg p-4">
@@ -217,7 +217,7 @@
                 <div class="grid grid-cols-4 max-w-7xl px-2 py-2 m-auto">
                     <div class="w-80 pt-20">
                         <div class="">
-                            <img src="../images/icons8-google-48.png" class="size-16 pb-2">
+                            <img src="./images/icons8-google-48.png" class="size-16 pb-2">
                             <h1 class=" font-semibold px-2 py-2 text-lg text-white">SHIVAKUMAR ENGG WORKS</h1>
                             <p class="px-2 py-2 text-white font-light">Shivakumar Engineering works™, founded on a legacy of premier products and service, will continue to provide mission critical valves, pumps, and aftermarket services in oil and gas, power generation, water and wastewater, and general industry.</p>
                         </div>     
@@ -250,16 +250,16 @@
                         
                         <div class="pt-6 flex">
                             <a href="#" class="px-2">
-                                <img src="../images/icons8-linkedin-50.png" class="size-8">
+                                <img src="./images/icons8-linkedin-50.png" class="size-8">
                             </a>
                             <a href="#" class="px-2">
-                                <img src="../images/twitter.png" class="size-8">
+                                <img src="./images/twitter.png" class="size-8">
                             </a>
                             <a href="#" class="px-2">
-                                <img src="../images/facebook.png" class="size-8">
+                                <img src="./images/facebook.png" class="size-8">
                             </a>
                             <a href="#" class="px-2">
-                                <img src="../images/instagram.png" class="size-8">
+                                <img src="./images/instagram.png" class="size-8">
                             </a>
                         </div>
                     </div>
